<resources>
    <string name="app_name">Film Dictionary</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_setting">Setting</string>
    <string name="title_search">Search</string>
    <string name="text_genres">Genres</string>
    <string name="tab_information">Information</string>
    <string name="tab_movies">Movies</string>
    <string name="title_name">Name:</string>
    <string name="titlt_gender">Gender:</string>
    <string name="title_birthday">Birthday:</string>
    <string name="title_place_of_birth">Place of Birth:</string>
    <string name="title_department">Department:</string>
    <string name="title_biography">Biography:</string>
    <string name="title_popularity">Popularity</string>
    <string name="tab_trailer">Trailer</string>
    <string name="tab_actor">Actor</string>
    <string name="tab_producer">Producer</string>
    <string name="text_search_movie">Search movies</string>
    <string name="label_minutes">minutes</string>
    <string name="label_overview">Overview</string>
    <string name="label_empty">EMPTY</string>
    <string name="label_charater">as</string>
    <string name="text_capital_history">HISTORY</string>
</resources>
