<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.movie_detail.MovieDetailActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <fragment
            android:id="@+id/frag_youtube"
            android:name="com.ptit.filmdictionary.ui.movie_detail.YoutubeFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs_movie_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frag_youtube"
            app:tabIndicatorColor="@color/color_black"
            app:tabSelectedTextColor="@color/color_star"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
            app:tabTextColor="@color/color_black">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_information" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_trailer" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_actor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_actor" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_producer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_producer" />
        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs_movie_detail" />
    </android.support.constraint.ConstraintLayout>
</layout>
