<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ptit.filmdictionary.ui.actor.info.ActorInfoViewModel" />
    </data>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_4"
        tools:context=".ui.actor.info.ActorInfoFragment">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progress_load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/color_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/view_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress_load">

                <TextView
                    android:id="@+id/label_name"
                    style="@style/LabelInforActor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_name"
                    style="@style/TextViewInforActor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.mName}"
                    app:layout_constraintBottom_toBottomOf="@id/label_name"
                    app:layout_constraintStart_toEndOf="@id/vertical_line"
                    app:layout_constraintTop_toTopOf="@id/label_name" />

                <TextView
                    android:id="@+id/label_gender"
                    style="@style/LabelInforActor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titlt_gender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_name" />

                <TextView
                    android:id="@+id/text_gender"
                    style="@style/TextViewInforActor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.mGender}"
                    app:layout_constraintBottom_toBottomOf="@id/label_gender"
                    app:layout_constraintStart_toEndOf="@id/vertical_line"
                    app:layout_constraintTop_toTopOf="@id/label_gender" />

                <TextView
                    android:id="@+id/label_birthday"
                    style="@style/LabelInforActor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_birthday"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_gender" />

                <TextView
                    android:id="@+id/text_birthday"
                    style="@style/TextViewInforActor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.mBirthday}"
                    app:layout_constraintBottom_toBottomOf="@id/label_birthday"
                    app:layout_constraintStart_toEndOf="@id/vertical_line"
                    app:layout_constraintTop_toTopOf="@id/label_birthday" />

                <TextView
                    android:id="@+id/label_place_of_birth"
                    style="@style/LabelInforActor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_place_of_birth"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_birthday" />

                <TextView
                    android:id="@+id/text_place_of_birth"
                    style="@style/TextViewInforActor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.mPlaceOfBirth}"
                    app:layout_constraintBottom_toBottomOf="@id/label_place_of_birth"
                    app:layout_constraintStart_toEndOf="@id/vertical_line"
                    app:layout_constraintTop_toTopOf="@id/label_place_of_birth" />

                <TextView
                    android:id="@+id/label_department"
                    style="@style/LabelInforActor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_department"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_place_of_birth" />

                <TextView
                    android:id="@+id/text_deparment"
                    style="@style/TextViewInforActor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.mDepartment}"
                    app:layout_constraintBottom_toBottomOf="@id/label_department"
                    app:layout_constraintStart_toEndOf="@id/vertical_line"
                    app:layout_constraintTop_toTopOf="@id/label_department" />

                <TextView
                    android:id="@+id/label_biography"
                    style="@style/LabelInforActor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_biography"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_department" />

                <TextView
                    android:id="@+id/text_biography"
                    style="@style/TextViewInforActor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.mBiography}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_biography" />

                <ProgressBar
                    android:id="@+id/progress_popularity"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:background="@drawable/custom_progressbar_bg"
                    android:max="100"
                    android:progress="@{viewModel.mProogress}"
                    android:progressDrawable="@drawable/custom_progressbar_drawable"
                    app:layout_constraintEnd_toEndOf="@id/label_popularity"
                    app:layout_constraintStart_toStartOf="@id/label_popularity"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.mPopularity}"
                    android:textColor="@color/color_black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/progress_popularity"
                    app:layout_constraintEnd_toEndOf="@id/progress_popularity"
                    app:layout_constraintStart_toStartOf="@id/progress_popularity"
                    app:layout_constraintTop_toTopOf="@id/progress_popularity" />

                <TextView
                    android:id="@+id/label_popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_popularity"
                    android:textColor="@color/color_black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/progress_popularity" />

                <android.support.constraint.Guideline
                    android:id="@+id/vertical_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3" />
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>
